--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +919590307829</p>
+<p>Email: poorvik9683@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  dno6 sharavathi nagar<br />
+  Shivamogga<br />
+  Karnataka,India <br />
 </p>
